--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -6,6 +6,11 @@
     <div class="col">
         <h1>This is the Home page</h1>
         <p> This is some text</p>
+        <p>
+        {{index .StringMap "test"}}
+        </p>
+
+   <!-- <img src="/static/images/house.jpg" height="800" width="1000" alt="house" /> -->
         </div>
         </div>
         </div>
