--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -1,17 +1,57 @@
 {{template "base" .}}
 
 {{define "content" }}
-    <div class="container">
-    <div class="row">
-    <div class="col">
-        <h1>This is the Home page</h1>
-        <p> This is some text</p>
-        <p>
-        {{index .StringMap "test"}}
-        </p>
+<div id="main-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+		<div class="carousel-indicators">
+    			<button type="button" data-bs-target="#main-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    			<button type="button" data-bs-target="#main-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    			<button type="button" data-bs-target="#main-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  		</div>
+ 	 	<div class="carousel-inner">
+    		<div class="carousel-item active">
+      		<img src="/static/images/women.jpg" class="d-block w-100" alt="Woman and Laptop">
+			 <div class="carousel-caption d-none d-md-block">
+        			<h5>First slide label</h5>
+        			<p>Some representative placeholder content for the first slide.</p>
+      		</div>
+    		</div>
+   		 <div class="carousel-item">
+      		<img src="/static/images/tray-cup.jpg" class="d-block w-100" alt="Tray with coffee">
+			<div class="carousel-caption d-none d-md-block">
+        			<h5>Second slide label</h5>
+        			<p>Some representative placeholder content for the first slide.</p>
+      		</div>
+    		</div>
+    		<div class="carousel-item">
+      		<img src="/static/images/house.jpg" class="d-block w-100" alt="Outside view">
+			<div class="carousel-caption d-none d-md-block">
+        			<h5>Third slide label</h5>
+        			<p>Some representative placeholder content for the first slide.</p>
+      		</div>
+    		</div>
+  		</div>
+		</div>
 
-   <!-- <img src="/static/images/house.jpg" height="800" width="1000" alt="house" /> -->
-        </div>
-        </div>
-        </div>
+	 <div class="container"> 
+
+	<div class="row">
+	<div class="col">
+		<h1 class="text-center mt-4"> Welcome to Fort Smythe Bed and Breakfast</h1>
+		<p>Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember
+		Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember
+		Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember
+		Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember
+		Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember
+		Your home away from home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember
+		</p>
+	</div>
+	</div>
+
+	<div class="row">
+		<div class="col text-center">
+			<a href="/search-availability" class="btn btn-success"> Make Reservation Now </a>
+		</div>
+	</div>
+	
+	</div>
 {{end}}
