--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -162,19 +162,16 @@
                 async function custom(c){
                     const{title="", html = ""}=c
 
-                   const { value: formValues } = await Swal.fire({
+                   const { value: result } = await Swal.fire({
                         title,
                         html,
                         backdrop:false,
                         focusConfirm: false,
                         showCancelButton: true,
                         willOpen:()=>{
-                            const elem = document.getElementById('reservation-dates-modal')
-                            const rp= new DateRangePicker(elem,{
-                                format: 'yyyy-mm-dd',
-                                showOnFocus:true,
-                                orientation: 'top auto'
-                            })
+                           if(c.willOpen !== undefined){
+                           c.willOpen();
+                          }
                         },
                         preConfirm: () => {
                             return [
@@ -183,13 +180,24 @@
                             ]
                         },
                         didOpen: () => {
-                            document.getElementById('start').removeAttribute('disabled');
-                            document.getElementById('end').removeAttribute('disabled');
+                            if(c.didOpen!== undefined) {
+                            c.didOpen()
+                            }
                         },
                     })
 
-                    if (formValues) {
-                        Swal.fire(JSON.stringify(formValues))
+                    if (result){
+                    if(result.dismiss !== Swal.DismissReason.cancel){
+                        if(result.value !== ""){
+                           if(c.callback !== undefined){
+                                c.callback(result);
+                           }                             
+                        } else {
+                        c.callback(false);
+                    }
+                    } else {
+                        c.callback(false);
+                    }
                     }
                 }
 
