--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -7,8 +7,8 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <h1 class="mt-5"> Search for Availability</h1>
-                <form action="/make-reservation" method="get" novalidate class="needs-validation">
-
+                <form action="/search-availability" method="post" novalidate class="needs-validation">
+                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}"/>
                     <div class="row">
                         <div class="col">
                     <div class="row" id="reservation-dates">
