--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -1,46 +1,57 @@
-{{template "base" .}}
-
-{{define "content"}}
-  <div class="container">
-
+{{template "base" .}} {{define "content"}}
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <h1 class="mt-5">Search for Availability</h1>
+      <form
+        action="/search-availability"
+        method="post"
+        novalidate
+        class="needs-validation"
+      >
+        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
         <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-6">
-                <h1 class="mt-5"> Search for Availability</h1>
-                <form action="/search-availability" method="post" novalidate class="needs-validation">
-                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}"/>
-                    <div class="row">
-                        <div class="col">
-                    <div class="row" id="reservation-dates">
-                        <div class="col">
-                        <input type="text" placeholder="Arrival" class="form-control" name="start" required/>
-                        </div>
-                        <div class="col">
-                        <input type="text" placeholder="Departure"class="form-control" name="end" required/>
-                        </div>
-                    </div>
-                    </div>
-                    </div>
-
-
-                        <hr>
-                    <div class="d-grid gap-2 col-6 mx-auto">
-                    <button type="submit" class="btn btn-primary mt-2">Search Availability</button>
-                    </div>
-                </form>
-
+          <div class="col">
+            <div class="row" id="reservation-dates">
+              <div class="col">
+                <input
+                  type="text"
+                  placeholder="Arrival"
+                  class="form-control"
+                  name="start"
+                  required
+                />
+              </div>
+              <div class="col">
+                <input
+                  type="text"
+                  placeholder="Departure"
+                  class="form-control"
+                  name="end"
+                  required
+                />
+              </div>
             </div>
+          </div>
         </div>
+
+        <hr />
+        <div class="d-grid gap-2 col-6 mx-auto">
+          <button type="submit" class="btn btn-primary mt-2">
+            Search Availability
+          </button>
+        </div>
+      </form>
     </div>
+  </div>
+</div>
 
-
-{{end}}
-
-{{define "js"}}
+{{end}} {{define "js"}}
 <script>
-   const elem = document.getElementById('reservation-dates');
-            const rangepicker = new DateRangePicker(elem, {
-                format: "yyyy-mm-dd",
-            });
+  const elem = document.getElementById("reservation-dates");
+  const rangepicker = new DateRangePicker(elem, {
+    format: "yyyy-mm-dd",
+  });
 </script>
 {{end}}
