--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -21,6 +21,7 @@
                   class="form-control"
                   name="start"
                   required
+                  autocomplete="off"
                 />
               </div>
               <div class="col">
@@ -30,6 +31,7 @@
                   class="form-control"
                   name="end"
                   required
+                  autocomplete="off"
                 />
               </div>
             </div>
@@ -52,6 +54,7 @@
   const elem = document.getElementById("reservation-dates");
   const rangepicker = new DateRangePicker(elem, {
     format: "yyyy-mm-dd",
+    minDate: new Date(),
   });
 </script>
 {{end}}
