--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -4,13 +4,20 @@
  <div class="container">
         <div class="row">
             <div class="col">
+             {{$res := index .Data "reservation"}}
              <h1>Make Reservation</h1>
-                <h4 style="margin-top:2rem">Reservation Deatails</h4>
 
-                {{$res := index .Data "reservation"}}
+                <p style="margin-top:2rem"><strong>Reservation Deatails:</strong><br/>
+                Room: {{$res.Room.RoomName}}<br/>
+                Arrival: {{index .StringMap "start_date"}}<br/>
+                Departure: {{index .StringMap "end_date"}}
+                </p>
+            
                 <form method="post" action="" class="" novalidate>
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}"/>
-
+                     <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}"/>   
+                      <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}"/> 
+                         <input type="hidden" name="room_id"value="{{$res.RoomId}}"/>
 
                     <div class="form-group mt-5 mb-3">
                         <label for="first_name">First Name:</label>
@@ -19,7 +26,7 @@
                         {{end}}
                         <input type="text" class= "form-control {{with .Form.Errors.Get "first_name"}} is-invalid {{end}}" 
                         required autocomplete="off" placeholder="First Name" name="first_name" 
-                        id="first_name" value="{{$res.FirstName}}"/>
+                        id="first_name" value="{{$res.FirstName}}" autocomplete="off"/>
                     </div>
 
                     <div class="form-group mb-3">
@@ -28,8 +35,9 @@
                             <label class="text-danger">{{.}}</label>
                         {{end}}
                         <input type="text" required class= "form-control {{with .Form.Errors.Get "last_name"}} is-invalid {{end}}" autocomplete="off" 
-                        placeholder="Last Name" name="last_name" id="last_name" value="{{$res.LastName}}"/>
+                        placeholder="Last Name" name="last_name" id="last_name" value="{{$res.LastName}}" autocomplete="off"/>
                      </div>
+                                      
 
                     <div class="form-group mb-3">
                         <label for="email">Email:</label>
@@ -37,7 +45,7 @@
                             <label class="text-danger">{{.}}</label>
                         {{end}}
                         <input type="email" required class= "form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}" autocomplete="off" placeholder="Email" 
-                        name="email" id="email" value="{{$res.Email}}"/>
+                        name="email" id="email" value="{{$res.Email}}" autocomplete="off"/>
                     </div>
 
                     <div class="form-group mb-3">
@@ -46,7 +54,7 @@
                             <label class="text-danger">{{.}}</label>
                         {{end}}
                         <input type="text" required class= "form-control {{with .Form.Errors.Get "phone"}} is-invalid {{end}}" autocomplete="off" placeholder="Phone Number" 
-                        name="phone" id="phone" value="{{$res.Phone}}"/>
+                        name="phone" id="phone" value="{{$res.Phone}}" autocomplete="off"/>
                     </div>
 
                     <hr>
