--- a/templates/reservation-summary.page.tmpl
+++ b/templates/reservation-summary.page.tmpl
@@ -19,13 +19,18 @@
                 </tr>
 
                 <tr>
+                    <td>Room:</td>
+                    <td>{{$res.Room.RoomName}}</td>
+                </tr>
+
+                <tr>
                     <td>Arrival:</td>
-                    <td></td>
+                    <td>{{index .StringMap "start_date"}}</td>
                 </tr>
 
                 <tr>
                     <td>Departure:</td>
-                    <td></td>
+                    <td>{{index .StringMap "end_date"}}</td>
                 </tr>
 
                 <tr>
